--- a/style.css
+++ b/style.css
@@ -3,3 +3,38 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1{
+  text-align: center;
+}
+
+img{
+  display: block;
+  margin: 0 auto;
+}
+figcaption{
+  text-align: center;
+}
+nav{
+  text-align: center;
+  
+}
+a{
+  padding: 0 10px;
+  background-color: gray;
+
+}
+#featured-property p{
+  display: block;
+  width: 800px;
+  margin: auto;
+  text-align: center;
+  line-height:2
+}
+
+#details div{
+  float:left;
+  width:25%;
+  background-color: red;
+  text-align: center;
+}
